# FastAPI-Project-Service-Managament

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  startup.sh
backend/: backend_prestart.py  crud_db.py  init_database.py  init_s3.py  main.py
backend/API/: auth.py  documents.py  main_API.py  projects.py  users.py
backend/core/: app_config.py  aws.py  control_db.py  dependencies.py  security.py
backend/models/: models_API.py  models_db.py
backend/templates/email_templates/: invitation_project_email.html  reset_password_email.html
backend/templates/forms/: invitation_page.html  reset_password_form.html
backend/tests/: conftest.py  test_backend_pre_start.py  test_file_type_s3_upload_validation.py
backend/tests/API/: test_auth.py  test_dependencies_API.py  test_documents.py  test_projects.py  test_users.py
backend/tests/crud/: test_documents.py  test_project_members.py  test_projects.py  test_users.py
backend/tests/utils/: documents.py  projects.py  users.py  utils.py
backend/utils/: email_utils.py  files_utils.py  s3_utils.py
test_files/: Lab Convección.docx  Lab Transistor.docx
