[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="project-management-api"
version="0.1.0"
requires-python=">=3.11,<3.12"

dependencies = [
    "fastapi[standard]",
    "sqlmodel",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "email-validator",
    "python-multipart",
    "jinja2",
    "tenacity",
    "pyjwt",
    "emails",
    "pwdlib[argon2,bcrypt]",
    "boto3",
    "boto3-stubs"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio"
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.fastapi]
entrypoint="backend.main:app"

[tool.ruff]
target-version="py311"


